--- a/camisetasKante/camisetasWebApp/templates/camisetasWebApp/conjuntos.html
+++ b/camisetasKante/camisetasWebApp/templates/camisetasWebApp/conjuntos.html
@@ -3,7 +3,65 @@
 {% load static %}
 
 {% block content %}
-
+ <!-- Section-->
+ <section class="py-5">
+    <div class="container px-4 px-lg-5 mt-5">
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+            <div class="col mb-5">
+                <div class="card h-100">
+<!-- Sale badge-->
+<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+<!-- Product image-->
+<img class="card-img-top" src="{% static 'assets/conjuntoLiverpool.webp' %}" alt="..." />
+<!-- Product details-->
+<div class="card-body p-4">
+    <div class="text-center">
+        <!-- Product name-->
+        <h5 class="fw-bolder">Conjunto Liverpool</h5>
+        <!-- Product reviews-->
+        <div class="d-flex justify-content-center small text-warning mb-2">
+            <div class="bi-star-fill"></div>
+            <div class="bi-star-fill"></div>
+            <div class="bi-star-fill"></div>
+            <div class="bi-star-fill"></div>
+            <div class="bi-star-fill"></div>
+        </div>
+        <!-- Product price-->
+        <span class="text-muted text-decoration-line-through">$125</span>
+        $100
+    </div>
+</div>
+<!-- Product actions-->
+<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
+</div>
+</div>
+</div>
+<div class="col mb-5">
+<div class="card h-100">
+<!-- Product image-->
+<img class="card-img-top" src="{% static 'assets/conjuntoChelseaa.webp' %}" alt="..." />
+<!-- Product details-->
+<div class="card-body p-4">
+    <div class="text-center">
+        <!-- Product name-->
+        <h5 class="fw-bolder">Conjunto Chelsea</h5>
+         <!-- Product reviews-->
+         <div class="d-flex justify-content-center small text-warning mb-2">
+            <div class="bi-star-fill"></div>
+            <div class="bi-star-fill"></div>
+            <div class="bi-star-fill"></div>
+            <div class="bi-star-fill"></div>
+            <div class="bi-star-fill"></div>
+        </div>
+        <!-- Product price-->
+        $120.00
+    </div>
+</div>
+<!-- Product actions-->
+<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
+</div>
 
 
 
